# traceunit

./: .gitignore  README.md  pyproject.toml
configs/: appworld.yaml  appworld_c0.yaml  hle.yaml  hle_ood.yaml  hle_source.yaml  hle_source_c0.yaml  locomo.yaml  longmemeval.yaml  swebench_c0.yaml  swebench_verified.yaml  terminalbench.yaml
docker/traceunit-agent/: Dockerfile
docs/: EXPERIMENTS.md  PROTOCOL.md  TODO.md
scripts/: run_miniswe_swebench_single.py
src/traceunit/: __init__.py  __main__.py  agent_probe.py  archive.py  battery.py  calibration.py  candidate.py  cli.py  composition.py  config.py  decision.py  evaluation.py  final_evaluation.py  io.py  models.py  ontology.py  ood_evaluation.py  optimizer.py  packets.py  paired.py  protocol.py  proxy_analysis.py  replay.py  score_only.py  store.py  tests_runtime.py  trace_evidence.py  ut_memory.py
src/traceunit/agents/: __init__.py  prompts.py  runner.py
src/traceunit/benchmarks/: __init__.py  appworld.py  appworld_worker.py  base.py  common.py  factory.py  harbor_worker.py  hle.py  hle_worker.py  memory.py  native_eval.py  openai_chat.py  pools.py  swebench.py  swebench_eval_worker.py  swebench_runner.py  terminalbench.py
tests/: conftest.py  test_agent_probe.py  test_archive.py  test_battery.py  test_benchmark_splits.py  test_calibration.py  test_composition.py  test_decision.py  test_hle_split.py  test_memory_benchmarks.py  test_ood_evaluation.py  test_optimizer_loop.py  test_protocol.py  test_proxy_analysis.py  test_replay.py  test_test_runtime.py
tests/fixtures/: appworld_smoke_agent.py
(+14 files in other folders)
